test/valid/59809_chained_records/chained_records.mag
-- Author: 59809, Manuel Leitão

fun move (p, dx, dy) : ({x: Int, y: Int}, Int, Int) -> {x: Int, y: Int} =
    {x = p.x + dx, y = p.y + dy}

fun main (_) : Unit -> Unit =
    var p : {x: Int, y: Int} = {x = 1, y = 2};
    print(move(p, 3, 4).y)