test/invalid-syntax/59809_broken_power_exp/broken_power_exp.mag
-- Author: 59809, Manuel Leitão

fun main (_) : Unit -> Unit =
    var result : Int = 2 ^ (3 ^ );
    print(result)